--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,16 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0"
+        "php": ">=7.1.0",
+        "ext-swoole": ">=4.0.0",
+        "ext-json": "*",
+        "ext-mysqli": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5",
         "friendsofphp/php-cs-fixer": "^2.11",
-        "phpstan/phpstan-shim": "^0.10"
+        "phpstan/phpstan-shim": "^0.10",
+        "eaglewu/swoole-ide-helper": "dev-master"
     },
     "autoload": {
         "psr-4": {
